@startuml

    class category {
        List of categories.
        ==
        #id : int(2)
        name : varchar(255)
    }

    class product {
        List of product types.
        ==
        #id : int(2)
        id_category -- PFK
        name : varchar(255)
    }

    class offData {
        Copy of OFF data.
        ==
        #id
        id_product -- PFK
        product-name VARCHAR
        brands : varchar(255)
        quantity : varchar(255)
        stores : varchar(255)
        url : varchar(255)

    }

    class userFavorite {
        User favorites.
        ==
        #id
        id_offdata INTEGER -- PFK
    }

    category "1" *-- "1..*" product
    product "1" *-- "1..*" offData
    offData "1" -- "1" userFavorite

@enduml